<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.qf.nwt.application.fragment.Match">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/top_relativeLayout"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            >
            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/string_temperature"
                android:gravity="center_vertical"
                android:textColor="#000"
                />
            <com.thinkcool.circletextimageview.CircleTextImageView
                android:id="@+id/ctiv_temperature"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerCrop"
                app:citv_border_width="1dp"
                app:citv_border_color="#000"
                app:citv_text_text="@string/string_all_temperature"
                app:citv_text_color="#545353"
                app:citv_text_size="20dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            >
            <TextView
                android:id="@+id/tv_occasion"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/string_occasion"
                android:gravity="center_vertical"
                android:textColor="#000"
                />
            <com.thinkcool.circletextimageview.CircleTextImageView
                android:id="@+id/ctiv_occasion"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerCrop"
                app:citv_border_width="1dp"
                app:citv_border_color="#000"
                app:citv_text_text="@string/string_all_occasion"
                app:citv_text_color="#545353"
                app:citv_text_size="20dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            >
            <TextView
                android:id="@+id/tv_color"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/string_color"
                android:gravity="center_vertical"
                android:textColor="#000"
                />
            <com.thinkcool.circletextimageview.CircleTextImageView
                android:id="@+id/ctiv_color"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerCrop"
                app:citv_border_width="1dp"
                app:citv_border_color="#000"
                app:citv_text_text="@string/string_all_color"
                app:citv_text_color="#545353"
                app:citv_text_size="20dp"
                />
        </LinearLayout>

    </RelativeLayout>
    <View
        android:id="@+id/devider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"
        />
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/match_swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/match_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
