<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    >

    <!--背景图片-->
    <RelativeLayout
        android:id="@+id/backimg_inspir"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@mipmap/ic_launcher"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            >
            <!--头像-->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/headportrait_inspir"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:civ_border_overlay="true"
                android:src="@mipmap/icon_user"
                />
            <!--用户名称-->
            <TextView
                android:id="@+id/tv_name_inspir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recyitem_name"
                android:layout_marginLeft="10dp"
                android:textColor="#878787"
                />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rcy_item_bg"
            >
            <!--标题-->
            <TextView
                android:id="@+id/title_inspir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/recyitem_title"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                />
            <!--点赞图标-->
            <ImageView
                android:id="@+id/img_like_inspir"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignLeft="@id/title_inspir"
                android:layout_below="@id/title_inspir"
                android:background="@mipmap/icon_like"
                />
            <!--点赞量-->
            <TextView
                android:id="@+id/tv_like_inspir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/img_like_inspir"
                android:layout_toRightOf="@id/img_like_inspir"
                android:text="@string/recyitem_like"
                android:textColor="@android:color/white"
                />
            <!--评论图标-->
            <ImageView
                android:id="@+id/img_commit_inspir"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@id/img_like_inspir"
                android:layout_toRightOf="@id/tv_like_inspir"
                android:background="@mipmap/icon_commit" />
            <!--评论量-->
            <TextView
                android:id="@+id/tv_commit_inspir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/img_like_inspir"
                android:layout_toRightOf="@id/img_commit_inspir"
                android:text="@string/recyitem_commit"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>